4-authorization/currency-allow-frontend-checkout.yaml
# allow the frontend to access currencyservice
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "currency-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: currencyservice
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/frontend-sa"]
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/checkoutservice-sa"]
