4-authorization/currency-deny-all.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "currency-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: currencyservice
